<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/ic_action_video"
        android:title="@string/upload"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_user"
        android:icon="@drawable/ic_action_user"
        android:title="@string/user"
        app:showAsAction="always" />
    <!--<item-->
        <!--android:id="@+id/action_option"-->
        <!--android:icon="@drawable/ic_option"-->
        <!--android:title="@string/option"-->
        <!--app:showAsAction="always" />-->
</menu>